--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "snippet",
   "version": "0.1.0",
+  "homepage": "https://t0n0yan.github.io/portfolio/",
   "private": true,
   "dependencies": {
     "@reduxjs/toolkit": "^1.8.4",
@@ -21,7 +22,9 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
