--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@reduxjs/toolkit": "^1.8.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
-    "axios": "^0.27.2",
+    "axios": "^1.2.1",
     "gh-pages": "^4.0.0",
     "i18next": "^22.4.6",
     "i18next-browser-languagedetector": "^7.0.1",
@@ -20,6 +20,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "sass": "^1.54.4",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
