--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@reduxjs/toolkit": "^1.8.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/user-event": "^13.5.0",
+    "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
     "gh-pages": "^4.0.0",
     "i18next": "^22.4.6",
